TAG: qcreports_db-3-5-3-2
TAG: qcreports_db-3-5-3-1
DATE: 04/24/2007
STAFF: dbm
CHANGES:
1) TR8253 - Added PRB_StrainJAX5.sql
2) TR8267 - Added PRB_StrainJAX6.sql

TAG: qcreports_db-3-5-1-46
DATE: 02/27/2007
STAFF: sc
CHANGES:
1) TR8171 - Error MTB_Triage.py - not testing for null

TAG: qcreports_db-3-5-1-45
DATE: 02/09/2007
STAFF: lec
CHANGES:
1) TR 8147; GXD_Image.py, GXD_FullCode.py

TAG: qcreports_db-3-5-1-44
DATE: 02/06/2007
STAFF: lec
CHANGES:
1) TR 7983; new Strain QC reports

TAG: qcreports_db-3-5-1-43
DATE: 01/29/2007
STAFF: lec
CHANGES:
1) TR 8120; moved MGI_GTGUP.py to public reports per Joel

TAG: qcreports_db-3-5-1-42
DATE: 01/25/2007
STAFF: lec
CHANGES:
1) TR 8125; replace SEQ_NoMarker.sql with SEQ_NMs.py

TAG: qcreports_db-3-5-1-41
DATE: 01/24/2007
STAFF: lec
CHANGES:
1) SEQ_NoMarker.sql; NM Sequences that are not associated with a MGI Marker

TAG: qcreports_db-3-5-1-40
TAG: qcreports_db-3-5-1-39
DATE: 01/23/2007
STAFF: lec
CHANGES:
1) TR8120; MGI_MappedFeatures.py
2) TR8121; MGI_RepSequences.py

TAG: qcreports_db-3-5-1-38
DATE: 01/22/2007
STAFF: lec
CHANGES:
1) MRK_ENSEMBL.py, MRK_VEGA.py; added row counts

TAG: qcreports_db-3-5-1-37
DATE: 01/19/2007
STAFF: sc
CHANGES:
1)qcr.html -updated path to index.html. We started putting logs etc
  in /data/downloads, but never updated qcr.html

TAG: qcreports_db-3-5-1-36
DATE: 01/16/2007
STAFF: lec
CHANGES:
1) MRK_ENSEMBL.py, MRK_VEGA.py

TAG: qcreports_db-3-5-1-35
TAG: qcreports_db-3-5-1-34
DATE: 01/04/2007
STAFF: lec
CHANGES:
1) goStats.sh; fix header

TAG: qcreports_db-3-5-1-33
DATE: 12/18/2006
STAFF: lec
CHANGES:
1) TR8063; GXD_SpecTheilerAge.py

TAG: qcreports_db-3-5-1-32
DATE: 12/12/2006
STAFF: lec
CHANGES: add row count to top of GXD reports

TAG: qcreports_db-3-5-1-31
TAG: qcreports_db-3-5-1-30
DATE: 12/11/2006
STAFF: lec
CHANGES:
1) pirsfload

TAG: qcreports_db-3-5-1-29
DATE: 12/07/2006
STAFF: lec
CHANGES:
1) GXD_ExpPresNotPres.py

TAG: qcreports_db-3-5-1-28
DATE: 12/04/2006
STAFF: lec
CHANGES: