@@ -7,7 +7,7 @@ into #coord
 from SEQ_Marker_Cache s, SEQ_Coord_Cache c
 where s._Organism_key = 1
 and s._Sequence_key = c._Sequence_key
-and c.provider in ('NCBI Gene Model', 'Ensembl Gene Model')
+and c.provider in ('NCBI Gene Model', 'Ensembl Gene Model', 'VEGA Gene Model')
 go
 
 create index idx1 on #coord(_Marker_key)
@@ -28,7 +28,7 @@ set nocount off
 go
 
 print ""
-print "Symbols w/ > 1 Ensembl or NCBI Gene Model Association"
+print "Symbols w/ > 1 Ensembl, VEGA or NCBI Gene Model Association"
 print ""
 
 select m.symbol, s.accID, provider = substring(s.provider,1,50)
