@@ -36,15 +36,34 @@ fp.write('#\n')
 fp.write('# VEGA Gene Models with no Marker Association\n')
 fp.write('#\n')
 
-results = db.sql('select a.accID ' + \
-      'from ACC_Accession a ' + \
-      'where a._MGIType_key = 19 and ' + \
-      'a._LogicalDB_key = 85 and ' + \
-      'not exists (select 1 from SEQ_Marker_Cache s where a._Object_key = s._Sequence_key) ' + \
-	'order by a.accID', 'auto')
+# get the full set of VEGA gene model ids
+# we exclude the obsolete vega ids (only include status = active)
+db.sql('select accID ' + \
+    'into #vegaGeneModel ' + \
+    'from ACC_Accession  a, SEQ_Sequence s ' + \
+    'where a._lOGicalDB_key = 85 ' + \
+    'and a._MGIType_key = 19 ' + \
+    'and a._Object_key = s._Sequence_key ' + \
+    'and s._SequenceStatus_key = 316342', None)
+db.sql('create index idxAccid on #vegaGeneModel(accID)', None)
+
+# get the set of VEGA ids with marker associations
+db.sql('select distinct accID ' + \
+    'into #vegaGeneAssoc ' + \
+    'from ACC_Accession  ' + \
+    'where _LogicalDB_key = 85 ' + \
+    'and _MGIType_key = 2 ' + \
+    'and preferred = 1', None)
+db.sql('create index idxAccid on #vegaGeneAssoc(accID)', None)
+results = db.sql('select gm.accid as vegaGeneModelNoAssoc ' + \
+    'from #vegaGeneModel gm ' + \
+    'where not exists (select 1 ' + \
+    'from #vegaGeneAssoc ga ' + \
+    'where ga.accid = gm.accid) ' + \
+    'order by gm.accID', 'auto')
 
 for r in results:
-    fp.write(r['accID'] + CRT)
+    fp.write(r['vegaGeneModelNoAssoc'] + CRT)
 
 fp.write('\n(%d rows affected)\n' % (len(results)))
 
